# lazychords-lib

./: .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  Doxyfile.in  LazychordLib.cbp  Log.txt  README.md  main.cpp
libs/ELL/: BinaryNode.h  BinaryNodes.h  Dump.h  Grammar.h  Node.h  Numerics.h  Parser.h  Primitives.h  RepeatMatchTpl.h  Rule.h  Storage.h  UnaryNode.h  UnaryNodes.h  Utils.h
src/: Caster.hpp  Chord.cpp  Chord.hpp  ConceptBase.hpp  Concepts.hpp  Concepts.ipp  Figure.hpp  Key.hpp  Log.cpp  Log.hpp  Melody.hpp  Music.cpp  Music.hpp  MusicRules.cpp  MusicRules.hpp  Note.cpp  Note.hpp  Pitch.cpp  Pitch.hpp  Random.cpp  Random.hpp  Random.ipp  Signature.cpp  Signature.hpp  Signature.ipp  Track.cpp  Track.hpp  Utilities.cpp  Utilities.hpp  Utilities.ipp
tests/: MusicRulesTest.cpp  catch.hpp  genericTests.cxx  genericTests.hxx  musicTest.cpp  signatureTests.cxx  utilitiesTests.cxx
